infra/envoy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  type: NodePort
  ports:
  - name: https
    port: 9443
    targetPort: 9443
    nodePort: 30443
